--- a/owncloudApp/src/main/res/values-fr/strings.xml
+++ b/owncloudApp/src/main/res/values-fr/strings.xml
@@ -365,6 +365,7 @@ Ci-dessous la liste des fichiers locaux, et les fichiers distants dans %5$s auxq
   <string name="get_sharees_error">Une erreur est survenue lors de la récupération des groupes et utilisateurs depuis le serveur</string>
   <string name="share_link_no_support_share_api">Désolé, le partage n\'est pas disponible sur votre serveur. Veuillez contacter votre administrateur.</string>
   <string name="share_link_file_error">Une erreur est survenue lors de la tentative de partage de ce fichier ou dossier</string>
+  <string name="unshare_link_file_error">Impossible de départager ce fichier ou ce dossier</string>
   <string name="update_link_file_error">Une erreur est survenue lors de la mise à jour du partage</string>
   <string name="share_link_password_title">Saisissez un mot de passe</string>
   <string name="share_link_empty_password">Vous devez saisir un mot de passe</string>
