--- a/owncloudApp/src/main/res/values-sq/strings.xml
+++ b/owncloudApp/src/main/res/values-sq/strings.xml
@@ -40,9 +40,9 @@
   <string name="prefs_biometric">Kyçje biometrike</string>
   <string name="prefs_biometric_summary">Që të aktivizohet kjo mundësi, aktivizoni kyçje përmes kodkalimesh ose përmes rregullsish</string>
   <string name="prefs_touches_with_other_visible_windows">Prekje me dritare të tjera të dukshme</string>
-  <string name="prefs_touches_with_other_visible_windows_summary">Lejo prekje kur pamja është zënë nga një tjetër dritare e dukshme. Aktivizojeni që të përdorni aplikacione filtrimi drite.</string>
+  <string name="prefs_touches_with_other_visible_windows_summary">Lejo prekje, kur pamja është zënë nga një tjetër dritare e dukshme. Aktivizojeni, që të përdorni aplikacione filtrimi drite.</string>
   <string name="confirmation_touches_with_other_windows_title">Jeni i sigurt se doni të aktivizohet kjo veçori?</string>
-  <string name="confirmation_touches_with_other_windows_message">Përgjegjësinë e kësaj veçorie e mbani ju vetë, një aplikacion dashakeq mund të përpiqej t’ua hidhte duke ju bërë të kryeni, pa e kuptuar, disa veprime, ndërkohë që përdorni pamje të tjera.</string>
+  <string name="confirmation_touches_with_other_windows_message">Përgjegjësinë e kësaj veçorie e mbani ju vetë, një aplikacion dashakeq mund të përpiqej t\’ua hidhte duke ju bërë të kryeni, pa e kuptuar, disa veprime, ndërkohë që përdorni pamje të tjera.</string>
   <string name="prefs_camera_picture_upload">Ngarkime fotosh</string>
   <string name="prefs_camera_picture_upload_summary">Fotot e bëra nga kamera ngarkoji vetvetiu</string>
   <string name="prefs_camera_video_upload">Ngarkime videosh</string>
@@ -111,8 +111,8 @@
   <string name="uploader_error_message_source_file_not_copied">Ndodhi një gabim teksa kopjohej kartela te një dosje e përkohshme. Ju lutemi, provoni ta ridërgoni.</string>
   <string name="file_list_seconds_ago">sekonda më parë</string>
   <string name="file_list_empty">Këtu nuk ka gjë. Ngarkoni diçka!</string>
-  <string name="file_list_empty_available_offline">S’ka kartela offline gati.</string>
-  <string name="file_list_empty_shared_by_links">S’janë ndarë kartela me të tjerë përmes lidhjeje.</string>
+  <string name="file_list_empty_available_offline">S\’ka kartela offline gati.</string>
+  <string name="file_list_empty_shared_by_links">S\’janë ndarë kartela me të tjerë përmes lidhjeje.</string>
   <string name="file_list_loading">Po ngarkohet…</string>
   <string name="file_list_no_app_for_file_type">S\’u gjet aplikacion për llojin e kartelës</string>
   <string name="local_file_list_empty">Në këtë dosje s\’ka kartela.</string>
@@ -208,8 +208,8 @@
   <string name="sync_fail_content">Njëkohësimi i %1$s s\’u plotësua dot</string>
   <string name="sync_fail_content_unauthorized">Fjalëkalim i pavlefshëm për %1$s</string>
   <string name="sync_conflicts_in_favourites_ticker">U hasën përplasje</string>
-  <string name="sync_conflicts_in_favourites_content">%1$d kartela kept-in-sync s\’u njëkohësuan dot</string>
-  <string name="sync_fail_in_favourites_ticker">Kartelat kept-in-sync dështuan</string>
+  <string name="sync_conflicts_in_favourites_content">%1$d kartela “kept-in-sync” s\’u njëkohësuan dot</string>
+  <string name="sync_fail_in_favourites_ticker">Kartelat “kept-in-sync” dështuan</string>
   <string name="sync_fail_in_favourites_content">Lënda e %1$d kartelave s\’u njëkohësua dot (%2$d përplasje)</string>
   <string name="sync_foreign_files_forgotten_ticker">Disa kartela vendore u harruan</string>
   <string name="sync_foreign_files_forgotten_content">%1$d kartela nga dosja %2$s s\’u kopjuan dot</string>
@@ -296,7 +296,7 @@
   <string name="remove_success_msg">Heqja doli me sukses</string>
   <string name="remove_fail_msg">Heqja dështoi</string>
   <string name="rename_dialog_title">Jepni një emër të ri</string>
-  <string name="available_offline_inherited_msg">Një dosje që përmban këtë kartelë është gati offline</string>
+  <string name="available_offline_inherited_msg">Një dosje që përmban këtë kartelë është gati “offline”</string>
   <string name="rename_local_fail_msg">Kopja vendore s\’u riemërtua dot; provoni një emër tjetër</string>
   <string name="rename_server_fail_msg">Riemërtimi s\’u plotësua dot</string>
   <string name="sync_file_fail_msg">S\’u kap dot kartela e largët</string>
@@ -363,13 +363,13 @@
   <string name="preview_image_error_unknown_format">Kjo figurë nuk mund të shfaqet</string>
   <string name="error__upload__local_file_not_copied">%1$s s\’u kopjua dot te dosja vendore %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">Shteg ngarkimesh fotosh</string>
-  <string name="get_shares_error">S’qe e mundur të merreshin ndarje nga shërbyesi</string>
-  <string name="get_sharees_error">S’qe e mundur të merreshin përdorues dhe grupe nga shërbyesi</string>
-  <string name="get_capabilities_error">S’qe e mundur të merreshin aftësi nga shërbyesi</string>
+  <string name="get_shares_error">S\’qe e mundur të merreshin ndarje nga shërbyesi</string>
+  <string name="get_sharees_error">S\’qe e mundur të merreshin përdorues dhe grupe nga shërbyesi</string>
+  <string name="get_capabilities_error">S\’qe e mundur të merreshin aftësi nga shërbyesi</string>
   <string name="share_link_no_support_share_api">Na ndjeni, ndarja me të tjerët s\’është e aktivizuar te shërbyesi juaj. Ju lutemi, lidhuni me përgjegjësin tuaj.</string>
-  <string name="share_link_file_error">S’qe e mundur të ndahej me të tjerë kjo kartelë ose dosje</string>
-  <string name="unshare_link_file_error">S’qe e mundur të hiqej ndarja e kësaj kartele apo dosjeje</string>
-  <string name="update_link_file_error">S’qe e mundur të përditësohej kjo kartel ose dosje</string>
+  <string name="share_link_file_error">S\’qe e mundur të ndahej me të tjerë kjo kartelë ose dosje</string>
+  <string name="unshare_link_file_error">S\’qe e mundur të hiqej ndarja e kësaj kartele apo dosjeje</string>
+  <string name="update_link_file_error">S\’qe e mundur të përditësohej kjo kartel ose dosje</string>
   <string name="share_link_password_title">Jepni një fjalëkalim</string>
   <string name="share_link_empty_password">Duhet të jepni një fjalëkalim</string>
   <string name="activity_chooser_send_file_title">Dërgoje</string>
@@ -388,7 +388,7 @@
   <string name="forbidden_permissions_delete">për fshirje të kësaj kartele</string>
   <string name="share_link_forbidden_permissions">për ndarje me të tjerët të kësaj kartele</string>
   <string name="unshare_link_forbidden_permissions">për zhbërje të ndarjes me të tjerët të kësaj kartele</string>
-  <string name="update_link_forbidden_permissions">që të përditësohet kjo ndarje</string>
+  <string name="update_link_forbidden_permissions">për përditësim të kësaj ndarjeje</string>
   <string name="forbidden_permissions_create">për krijim kartele</string>
   <string name="uploader_upload_forbidden_permissions">për ngarkim në këtë dosje</string>
   <string name="uploader_upload_forbidden">Ngarkimi s\’u lejua</string>
@@ -452,7 +452,7 @@
   <string name="share_no_users">Ende pa të dhëna të ndara me përdorues</string>
   <string name="share_incompatible_version">Që të ndahen gjëra me përdorues të tjerë, shërbyesi juaj lypset të jetë të paktën nën versionin 8.2</string>
   <string name="share_add_user_or_group">Shtoni përdorues ose grup</string>
-  <string name="share_via_link_section_title">Lidhje  publike</string>
+  <string name="share_via_link_section_title">Lidhje publike</string>
   <string name="share_via_link_create_title">Krijoni ndarje lidhjesh</string>
   <string name="share_via_link_edit_title">Përpunoni ndarje lidhjesh</string>
   <string name="share_via_link_name_label">Emër lidhjeje</string>
@@ -482,16 +482,16 @@
   <string name="edit_share_unshare">Resht së ndari</string>
   <string name="edit_share_done">u bë</string>
   <string name="action_retry_uploads">Riprovimi dështoi</string>
-  <string name="action_clear_failed_uploads">Pastrimi dështoi</string>
-  <string name="action_clear_successful_uploads">Pastrim i suksesshëm</string>
-  <string name="action_clear_finished_uploads">Pastro krejt të përfunduarit</string>
+  <string name="action_clear_failed_uploads">Spastrimi dështoi</string>
+  <string name="action_clear_successful_uploads">Spastrim i suksesshëm</string>
+  <string name="action_clear_finished_uploads">Spastro krejt të përfunduarit</string>
   <string name="manage_space_title">Administroni hapësirë</string>
   <string name="manage_space_description">Rregullimet, baza e të dhënave dhe dëshmitë e shërbyesit prej të dhënave nga %1$s do të fshihen përgjithmonë. \n\nKartelat e shkarkuara do të ruhen të paprekura.\n\nKy proces mund të hajë ca kohë.</string>
-  <string name="manage_space_clear_data">Pastroji të dhënat</string>
+  <string name="manage_space_clear_data">Spastroji të dhënat</string>
   <string name="manage_space_error">Ca kartela s\’u fshinë dot.</string>
   <string name="permission_storage_access">Që të ngarkoni &amp; shkarkoni kartela lypsen leje shtesë.</string>
   <string name="local_file_not_found_toast">Kartela s\’u gjet te sistemi vendor i kartelave</string>
-  <string name="confirmation_remove_files_alert">Doni vërtet të hiqen objektet e përgjedhur?</string>
+  <string name="confirmation_remove_files_alert">Doni vërtet të hiqen objektet e përzgjedhur?</string>
   <string name="confirmation_remove_folders_alert">Doni vërtet të hiqen objektet e përzgjedhur dhe lënda e tyre?</string>
   <string name="failed_upload_quota_exceeded_text">Hapësirë e pamjaftueshme te llogaria</string>
   <string name="auth_forbidden">Mirëfilltësim i ndaluar</string>
@@ -499,13 +499,13 @@
   <string name="prefs_privacy_policy">Rregulla privatësie</string>
   <string name="privacy_policy_error">Ndodhi një gabim:</string>
   <string name="service_unavailable">Shërbyesi s\’është gati</string>
-  <string name="streaming_certificate_error">S\'gatitet dot trasmetimi, ngaqë nuk besohet dëshmia e shërbyesit tuaj. Shkarkimi i kartelës do të fillojë vetvetiu</string>
+  <string name="streaming_certificate_error">S\'gatitet dot transmetimi, ngaqë nuk besohet dëshmia e shërbyesit tuaj. Shkarkimi i kartelës do të fillojë vetvetiu</string>
   <string name="streaming_unrecognized_input">Ky format videosh nuk mbulohet.</string>
   <string name="streaming_file_not_found_error">Kjo kartelë s\’gjendet më te shërbyesi</string>
   <string name="streaming_crossed_redirection">Nuk lejohet transmetim përmes ridrejtimesh të kryqëzuara</string>
   <string name="previewing_video_common_error">Kjo video s\’mund të luhet</string>
   <string name="previewing_video_not_supported">Paraparja e videove nuk mbulohet nga versioni Android i juaji. Shkarkimi i kartelës do të fillojë vetvetiu.</string>
-  <string name="streaming_position_not_available">\"Pozicion jo i mundshëm\"</string>
+  <string name="streaming_position_not_available">“Pozicion jo i mundshëm”</string>
   <string name="error_no_network_connection">Pajisja s\’është e lidhur në ndonjë rrjet</string>
   <string name="share_no_public_links">Ende s\’janë krijuar lidhje publike</string>
   <string name="share_no_link_in_this_share">Kjo ndarje nuk ka lidhje</string>
@@ -553,9 +553,9 @@
   <string name="welcome_feature_7_title">Mbulim për OpenID Connect</string>
   <string name="welcome_feature_7_text">Lidhuni te shërbyesit tuaj ownCloud në një rrugë më të sigurt, përmes OpenID Connect</string>
   <string name="no_borwser_installed_alert">S\’ka shfletues të instaluar. Ju lutemi, instaloni një Shfletues, që të mund të lejohet hyrje e sigurt.</string>
-  <string name="common_not_found">s’u gjet</string>
-  <string name="supports_oauth2_error">S’qe e mundur të dihej nëse mbulohet OAuth2</string>
-  <string name="get_base_url_error">S’qe e mundur të dihej URL-ja bazë e shërbyesit</string>
+  <string name="common_not_found">s\’u gjet</string>
+  <string name="supports_oauth2_error">S\’qe e mundur të dihej nëse mbulohet OAuth2</string>
+  <string name="get_base_url_error">S\’qe e mundur të dihej URL-ja bazë e shërbyesit</string>
   <string name="prefs_http_logs">Regjistro kërkesa dhe përgjigje HTTP</string>
   <string name="prefs_logs_summary">Regjistra mund të përmbajnë të dhëna rezervat. Për ndarje me të tjerët të regjistrave përgjegjësi mban thjesht përdoruesi</string>
 </resources>
