--- a/owncloudApp/src/main/res/values-zh-rTW/strings.xml
+++ b/owncloudApp/src/main/res/values-zh-rTW/strings.xml
@@ -400,6 +400,7 @@
   <string name="drawer_manage_accounts">管理帳號</string>
   <string name="auth_redirect_non_secure_connection_title">加密的連線是由一個未加密的連線轉向過來的.</string>
   <string name="actionbar_logger">記錄</string>
+  <string name="log_open_logs_view">開啟記錄視圖</string>
   <string name="log_send_history_button">傳送歷史</string>
   <string name="log_send_no_mail_app">沒有傳送紀錄的軟體. 請安裝郵件軟體</string>
   <string name="log_send_mail_subject">%1$s Android 應用程式記錄</string>
@@ -556,4 +557,6 @@
   <string name="common_not_found">找不到</string>
   <string name="supports_oauth2_error">無法知道是否支持OAuth2</string>
   <string name="get_base_url_error">無法知道伺服器基本超連結</string>
+  <string name="prefs_http_logs">記錄HTTP請求和響應</string>
+  <string name="prefs_logs_summary">記錄可能包含敏感信息。 與他人共享記錄與唯一的使用者責任</string>
 </resources>
