[tx] updated from transifex

--- a/owncloudApp/src/main/res/values-da/strings.xml
+++ b/owncloudApp/src/main/res/values-da/strings.xml
@@ -25,6 +25,10 @@
   <string name="drawer_item_uploads_list">Uploade filer</string>
   <string name="drawer_close">Luk</string>
   <string name="drawer_open">Åbn</string>
+  <string name="drawer_loading_quota">Indlæser kvota</string>
+  <string name="drawer_quota">%1$s af %2$s anvendes (%3$s %%)</string>
+  <string name="drawer_unavailable_free_storage">%1$s i brug</string>
+  <string name="drawer_unavailable_used_storage">Ingen tilgængelig information om pladsforbrug</string>
   <string name="drawer_feedback">Feedback</string>
   <string name="drawer_help">Hjælp</string>
   <string name="prefs_category_general">Generel</string>
@@ -33,25 +37,51 @@
   <string name="prefs_accounts">Konti</string>
   <string name="prefs_manage_accounts">Administrer konti</string>
   <string name="prefs_passcode">Passcode-lås</string>
+  <string name="prefs_biometric">Biometrisk lås</string>
+  <string name="prefs_biometric_summary">Slå passcode eller mønsterlås til for at aktivere denne valgmulighed</string>
+  <string name="prefs_touches_with_other_visible_windows">Berøring med andre synlige vinduer</string>
+  <string name="prefs_touches_with_other_visible_windows_summary">Tillad berøring når visningen er forstyrret af et andet vindue. Aktivér for at bruge med apps som filtrerer lys.</string>
+  <string name="confirmation_touches_with_other_windows_title">Er du sikker på du vil aktivere denne egenskab?</string>
+  <string name="confirmation_touches_with_other_windows_message">Anvend denne egenskab under eget ansvar, et ondsindet program vil kunne forsøge at narre dig til at udføre handlinger, uden din viden, der bruger andre visninger.</string>
   <string name="prefs_camera_picture_upload">Billede uploads</string>
   <string name="prefs_camera_picture_upload_summary">Upload automatisk billeder taget med kamera</string>
+  <string name="prefs_camera_video_upload">Videoupload</string>
+  <string name="prefs_camera_video_upload_summary">Automatisk upload af videoer optaget med kamera</string>
   <string name="prefs_log_title">Slå logning til</string>
   <string name="prefs_log_summary">Dette bruges til at logregistrere problemer</string>
   <string name="prefs_log_title_history">Logningshistorik</string>
   <string name="prefs_log_summary_history">Dette viser de optagne logger</string>
   <string name="prefs_log_delete_history_button">Slet historik</string>
   <string name="prefs_help">Hjælp</string>
+  <string name="prefs_sync_calendar_contacts">Synkronisér dine kontakter, kalendere og opgaver</string>
+  <string name="prefs_sync_calendar_contacts_summary">Installér DAVx⁵</string>
   <string name="prefs_recommend">Anbefal til en ven</string>
   <string name="prefs_feedback">Feedback</string>
   <string name="prefs_imprint">Aftryk</string>
   <string name="prefs_remember_last_share_location">Husk delt placering</string>
   <string name="prefs_remember_last_upload_location_summary">Husk seneste delte placering for overførsel</string>
+  <string name="prefs_pattern">Mønsterlås</string>
+  <string name="pattern_enter_pattern">Angiv venligst mønster</string>
+  <string name="pattern_configure_pattern">Angiv dit mønster</string>
+  <string name="pattern_remove_pattern">Slet dit mønster</string>
+  <string name="pattern_incorrect_pattern">Forkert mønster</string>
+  <string name="pattern_reenter_pattern">Angiv dit mønster igen</string>
+  <string name="pattern_not_same_pattern">Mønsteret er ikke identisk</string>
+  <string name="pattern_stored">Mønster er gemt</string>
+  <string name="pattern_removed">Mønster er slettet</string>
+  <string name="pattern_already_set">Låse til mønster og passcode kan ikke aktiveres på samme tid, slå venligst mønster fra først.</string>
+  <string name="passcode_already_set">Låse til mønster og passcode kan ikke aktiveres på samme tid, slå venligst passcode fra først.</string>
   <!--Bottom navigation bar-->
   <string name="bottom_nav_files">Filer</string>
   <string name="bottom_nav_uploads">Uploade filer</string>
+  <string name="bottom_nav_offline">Offline</string>
   <string name="bottom_nav_links">Links</string>
   <string name="recommend_subject">Prøv %1$s på din smartphone!</string>
   <string name="recommend_text">Jeg ønsker at invitere dig til at bruge %1$s på din smartphone!\nHent den her: %2$s</string>
+  <string name="error_reason">fordi</string>
+  <string name="auth_failure_snackbar">Sikkerhedsgodkendelse mislykkedes</string>
+  <string name="server_not_supported">Din serverversion er lavere end 10, så den understøttes ikke - opgradér din server til nyere version.</string>
+  <string name="auth_failure_snackbar_action">Skift konto</string>
   <string name="auth_oauth_failure_snackbar_action">Log ind</string>
   <string name="auth_check_server">Tjek server</string>
   <string name="auth_host_url">Serveradresse https://…</string>
