--- a/owncloudApp/src/main/res/values/strings.xml
+++ b/owncloudApp/src/main/res/values/strings.xml
@@ -606,4 +606,5 @@
     <string name="get_base_url_error">It was not possible to know the server base url</string>
     <string name="prefs_http_logs">Log HTTP requests and responses</string>
     <string name="prefs_logs_summary">Logs may contain sensitive information. Sharing logs with others is sole user responsibility</string>
+    <string name="synchronizing_account">Synchronizing account</string>
 </resources>
